--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ USE_GENERIC_CACHE=true
 ## IP addresses that the lancache monolithic instance is reachable on
 ## Specify one or more IPs, space separated - these will be used when resolving DNS hostnames through lancachenet-dns. Multiple IPs can improve cache priming performance for some services (e.g. Steam)## IP Address that the lancache monolithic instance will run on
 ## Note: This setting only affects DNS, monolithic and sniproxy will still bind to all IPs by default
-LANCACHE_IP=10.0.39.1
+LANCACHE_IP=192.168.1.50
 
 ## IP address on the host that the DNS server should bind to
-DNS_BIND_IP=10.0.39.1
+DNS_BIND_IP=192.168.1.50
 
 ## DNS Resolution for forwarded DNS lookups
-UPSTREAM_DNS=8.8.8.8
+UPSTREAM_DNS=1.1.1.1
 
 ## Storage path for the cached data
 ## Note that by default, this will be a folder relative to the docker-compose.yml file
@@ -26,7 +26,10 @@ CACHE_MEM_SIZE=500m
 ## If you have more storage, you'll likely want to increase this
 ## The cache server will prune content on a least-recently-used basis if it
 ## starts approaching this limit
-CACHE_DISK_SIZE=1000000m
+CACHE_DISK_SIZE=790000m
 
 ## Change this to limit the maximum age of cached content (default 3650d)
 CACHE_MAX_AGE=3650d
+
+## Cache Domains Repo
+CACHE_DOMAINS_REPO="https://github.com/PoeticDeath/cache-domains.git"
